fix(theme-chalk): :bug: fix actionBarTableColumnProps['align'] invalid

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -16,6 +16,17 @@
 
   /* 操作栏 */
   @include b(table-action-bar) {
+    &.is-center {
+      .cell {
+        justify-content: center;
+      }
+    }
+    &.is-right {
+      .cell {
+        justify-content: flex-end;
+      }
+    }
+
     &.#{$el-namespace + -table-fixed-column--right} {
       background-color: getCssVar('bg-color');
     }
